# shared_utils

./: .flake8  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  build.sh  claude_redis_refactor.txt  comprehensive_example.py  example_usage.py  pyproject.toml  query_tests.ipynb  sqlalc_async_test.ipynb  test_age_client.ipynb  test_async_db_client.py  test_async_redis_client.py  test_redis.ipynb
.github/workflows/: toml-version-bump.yml
shared_utils/: __init__.py  age_client.py  db_client.py  db_utils.py  kafka_client.py  serialization_utils.py
shared_utils/clients/: __init__.py  age_client.py  async_age_client.py  async_db_client.py  async_s3_client.py  db_client_base.py  redis_client.py
shared_utils/clients/utils/: age_client_base.py  db_client_base.py  lazy_proxy.py
shared_utils/event_contracts/: AllChunksProcessedEvent.py  DocumentChunkingFinishedEvent.py  DocumentIngestionFinalized.py  DocumentUploadedEvent.py  ProcessChunkRequestEvent.py
shared_utils/event_models/: ProcessChunkRequestEvent.py
shared_utils/queries/: __init__.py  apache_age.py  async_chunk_graphs.py  async_chunks.py  async_documents.py  async_ingestion_jobs.py  async_layouts.py  chunks.py  layouts.py
shared_utils/response_models/: UserPromptResponse.py
shared_utils/sql_models/: Chunk.py  CytoscapeElements.py  DocumentMetadata.py  Graph.py  IngestionJob.py  Layout.py  __init__.py
tests/: test_async_redis_client.py
