[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurgentai_shared_utils"
version = "0.4.17"
description = "A collection of shared utility functions for InsurgentAI microservices."
readme = "README.md"
requires-python = ">=3.12"

# Core dependencies that your package needs to run.
# Use PEP 508 syntax for specifying dependencies and versions.
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
    "redis",
    "aioboto3",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver
    "sqlalchemy[asyncio]>=2.0.0"  # SQLAlchemy with async support
]

# Needed to build with hatchling
[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_utils*"]
